[package]
name = "advent_2019"
version = "0.1.0"
authors = ["jrheard <jrheard@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
itertools = "0.9.0"
criterion = "0.3.3"
rayon = "1.3.1"
bytecount = "0.6.0"
regex = "1.3.9"
num = "0.3.0"
once_cell = "1.4.0"

[profile.release]
debug = true

[[bench]]
name = "all_solutions"
harness = false

[[bench]]
name = "individual"
harness = false
